<resources>
    <!--Manifest-->
    <string name="app_name">FancyCookBook</string>
    <string name="title_activity_register">Register Form</string>
    <string name="title_activity_login">Login Form</string>

    <!--Navigation-->
    <string name="title_account">Account</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_my_recipes">My recipes</string>
    <string name="title_favourites">Favourites</string>

    <!--Account fragment-->
    <string name="go_to_login">Login or Register</string>
    <string name="not_logged">You are not logged in yet. Login or register to browse your recipes and add new ones</string>

    <!--Logged account fragment-->
    <string name="logout">Logout</string>
    <string name="logged_as_user">Logged as user:</string>
    <string name="logged_with_email">Logged with email:</string>

    <!--Register-->
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_btn_action">Register</string>

    <!--Login-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn_action">Sign in</string>
    <string name="login_not_have_account">You don\'t have an account?</string>
    <string name="login_go_to_register">Create account</string>

    <!--Create recipe-->
    <string name="create_recipe_activity_title">Create recipe</string>
    <string name="create_recipe_title">Recipe name</string>
    <string name="create_recipe_needed_time">Needed time (minutes)</string>
    <string name="create_recipe_short_description">Short description</string>
    <string name="create_recipe_description">Recipe full description:</string>
    <string name="create_private_recipe">Private recipe</string>
    <string name="create_recipe_image">Attach</string>
    <string name="create_recipe_button">Create</string>

    <!--Recipes fragment-->
    <string name="recipes_fire">Load recipes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_recipie">CreateRecipieActivity</string>

</resources>
