<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateRecipeActivity">

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/create_recipe_activity_title"
        android:textSize="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@id/activity_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_recipe_title"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/recipe_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_recipe_needed_time"
                android:inputType="number" />

            <EditText
                android:id="@+id/recipe_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_recipe_short_description"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:singleLine="false" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_recipe_description"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>

            <CheckBox
                android:id="@+id/private_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_private_recipe" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
                    android:text="@string/create_recipe_image" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:maxWidth="100dp"
                        android:maxHeight="100dp"
                        android:src="@drawable/ic_image_black_24dp"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progress_circle"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="potential error"
            android:textColor="@color/colorError"
            android:textSize="15dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/create_recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe_button" />
    </LinearLayout>

</RelativeLayout>